config/cms-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-frontend
  labels:
    app: cms-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-frontend
  template:
    metadata:
      labels:
        app: cms-frontend
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: public-node-pool
      containers:
      - name: cms-frontend
        image: nginx:1.17
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cms-frontend-service
  labels:
    app: cms-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cms-frontend
