config/frontpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontpage
  labels:
    app: frontpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontpage
  template:
    metadata:
      labels:
        app: frontpage
    spec:
      containers:
      - name: frontpage
        image: nginx:1.17
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontpage-service
  labels:
    app: frontpage
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontpage
