config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: banchanxanh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontpage-service
            port:
              number: 80
  - host: cms.banchanxanh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms-service
            port:
              number: 80
